--- a/main.html
+++ b/main.html
@@ -7,7 +7,20 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student --> 
+	<h1>Dog Breeds</h1>
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Golden_Retriever_Puppy_6.JPG/800px-Golden_Retriever_Puppy_6.JPG" alt="Golden Retriever" width="200">
+            </a>
+        </li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Poodle_on_Grooming_table.jpg/800px-Poodle_on_Grooming_table.jpg" alt="Poodle" width="200">
+            </a>
+        </li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
