--- a/main.html
+++ b/main.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student --> 
-	<h1>Dog Breeds</h1>
+    <h1>Dog Breeds</h1>
     <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Golden_Retriever_Puppy_6.JPG/800px-Golden_Retriever_Puppy_6.JPG" alt="Golden Retriever" width="200">
+            <a href="https://en.wikipedia.org/wiki/Basset_Hound" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Basset Hound" width="200">
             </a>
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Poodle_on_Grooming_table.jpg/800px-Poodle_on_Grooming_table.jpg" alt="Poodle" width="200">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle" width="200">
             </a>
         </li>
-	</ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    </ul>
 </body>
-
 </html>
