--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
     <h1>Dog Breeds</h1>
     <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Golden_Retriever_Puppy_6.JPG/800px-Golden_Retriever_Puppy_6.JPG" alt="Golden Retriever" width="200">
+            <a href="https://en.m.wikipedia.org/wiki/Golden_Retriever">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="200">
             </a>
         </li>
         <li>
