--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <h1>Dog Breeds</h1>
     <ul>
         <li>
-            <a href="https://en.m.wikipedia.org/wiki/Golden_Retriever">
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target=_blank>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="200">
             </a>
         </li>
